mcc/Test/misc/invalid/empty_bin_number.c
int main()
{
	int a = 0b;
	return a;
}
 